# PrivacyService

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  ServiceThingDescription.json  ThingDescription.json  config_adapters.json
Adapter-Test/: Thing_Description.json  rest-api.py
Load-TD/: CMakeLists.txt
Load-TD/include/: fhe_handler.h  he_controller.h  he_handler.h  phe_handler.h  stdafx.h
Load-TD/src/: README.md  config_adapters.json  fhe_handler.cpp  he_controller.cpp  load_TD.cpp  main.cpp  phe_handler.cpp  rest_handler.cpp
Measurements/: measurement.py
VAS-Test/: Thing_Description.json  rest-api.py
include/: db_access.h  fhe_handler.h  he_controller.h  he_handler.h  phe_db_access.h  phe_handler.h  rest_handler.h  seal_handler.h  seal_he_handler.h  stdafx.h  vicinity_handler.h
src/: CMakeLists.txt  PrivacyPluginInterface.h  base64.cpp  db_access.cpp  db_access.h  fhe_handler.cpp  he_controller.cpp  he_controller.h  he_handler.cpp  he_handler.h  main.cpp  phe_db_access.cpp  phe_handler.cpp  rest_handler.cpp  rest_handler.h  rest_handler_interface.h  seal_handler.cpp  seal_handler.h  seal_he_handler.cpp  stdafx.h  vicinity_handler.cpp  vicinity_handler.h
src/mpc_plugin/: CMakeLists.txt  mpc_plugin.cpp  mpc_plugin.h
src/svm_plugin/: CMakeLists.txt  Recrypt_Task.cpp  Recrypt_Task.h  SVM_Handler.cpp  SVM_Handler.h  SVM_Task.cpp  SVM_Task.h  svm_plugin.cpp  svm_plugin.h  tasks.h  utility.h
test/: CMakeLists.txt  test_base64.cpp  test_db_access.cpp  test_main.cpp
